css: prevent every \M from having a vertical scrollbar
Started since adding overflow-x: auto;

--- a/ourbigbook.scss
+++ b/ourbigbook.scss
@@ -248,6 +248,7 @@ iframe {
 .math {
   align-items: center;
   overflow-x: auto;
+  overflow-y: clip;
   margin-bottom: $p-margin-vert;
   margin-top: $p-margin-vert;
   .caption {
